--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "description": "Financial Savings in Whatsapp using Twilio API.",
   "main": "index.js",
   "scripts": {
-    "start": "node ./bin/www",
-    "devstart": "nodemon ./bin/www",
+    "start": "node index.js",
+    "devstart": "nodemon index.js",
     "serverstart": "SET DEBUG=librarymgmt:* & npm run devstart",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Somanyu",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "twilio": "^3.84.0"
   },
