--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "start": "node index.js",
     "devstart": "nodemon index.js",
     "serverstart": "SET DEBUG=librarymgmt:* & npm run devstart",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Somanyu",
   "license": "ISC",
