--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Financial Savings in Whatsapp using Twilio API.",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "nodemon index.js",
     "devstart": "nodemon index.js",
     "serverstart": "SET DEBUG=finproject-server:* & npm run devstart",
     "test": "echo \"Error: no test specified\" && exit 1"
